force-app/main/default/objects/ELECTRONICPRODUCT__c/ELECTRONICPRODUCT__c.object-meta.xml
<CustomObject>
    <label>ELECTRONICPRODUCT</label>
    <nameField>
        <label>ELECTRONICPRODUCT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ELECTRONICPRODUCTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>