force-app/main/default/objects/ELECTRONICPRODUCT__c/fields/check_me__c.field-meta.xml
<CustomField>
    <fullName>check_me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check me</label>
    <type>Checkbox</type>
</CustomField>