force-app/main/default/objects/ELECTRONICPRODUCT__c/fields/pricedesp__c.field-meta.xml
<CustomField>
    <fullName>pricedesp__c</fullName>
    <label>pricedesp</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>